Added the-serpant-on-the-staff\nFixed minor issues with scripts

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ config.properties
 gen/
 # we dont want intermediate `-gen.tex` files to be checked in either
 *-gen.tex
-*.bak
+*.bak*
 help.txt
 help.md
 help.adoc
