--- a/system/docker/Dockerfile
+++ b/system/docker/Dockerfile
@@ -12,75 +12,79 @@ RUN wget 'https://fonts.google.com/download?family=Merriweather Sans' -O merriwe
   && mkdir -p /usr/share/fonts/truetype/google-fonts/merriweather-sans/ \
   && unzip merriweather-sans.zip -d /usr/share/fonts/truetype/google-fonts/merriweather-sans/ \
   && rm -f merriweather-sans.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Serif Bengali' -O notoserif-bengali.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Sans Bengali' -O notosans-bengali.zip \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notoserif-bengali/ \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notosans-bengali/ \
-  && unzip notoserif-bengali.zip -d /usr/share/fonts/truetype/google-fonts/notoserif-bengali/ \
-  && unzip notosans-bengali.zip -d /usr/share/fonts/truetype/google-fonts/notosans-bengali/ \
-  && rm -f notoserif-bengali.zip \
-  && rm -f notosans-bengali.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Serif Devanagari' -O notoserif-devanagari.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Sans Devanagari' -O notosans-devanagari.zip \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notoserif-devanagari/ \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notosans-devanagari/ \
-  && unzip notoserif-devanagari.zip -d /usr/share/fonts/truetype/google-fonts/notoserif-devanagari/ \
-  && unzip notosans-devanagari.zip -d /usr/share/fonts/truetype/google-fonts/notosans-devanagari/ \
-  && rm -f notoserif-devanagari.zip \
-  && rm -f notosans-devanagari.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Serif Gujarati' -O notoserif-gujarati.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Sans Gujarati' -O notosans-gujarati.zip \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notoserif-gujarati/ \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notosans-gujarati/ \
-  && unzip notoserif-gujarati.zip -d /usr/share/fonts/truetype/google-fonts/notoserif-gujarati/ \
-  && unzip notosans-gujarati.zip -d /usr/share/fonts/truetype/google-fonts/notosans-gujarati/ \
-  && rm -f notoserif-gujarati.zip \
-  && rm -f notosans-gujarati.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Serif Gurmukhi' -O notoserif-gurmukhi.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Sans Gurmukhi' -O notosans-gurmukhi.zip \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notoserif-gurmukhi/ \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notosans-gurmukhi/ \
-  && unzip notoserif-gurmukhi.zip -d /usr/share/fonts/truetype/google-fonts/notoserif-gurmukhi/ \
-  && unzip notosans-gurmukhi.zip -d /usr/share/fonts/truetype/google-fonts/notosans-gurmukhi/ \
-  && rm -f notoserif-gurmukhi.zip \
-  && rm -f notosans-gurmukhi.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Serif Kannada' -O notoserif-kannada.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Sans Kannada' -O notosans-kannada.zip \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notoserif-kannada/ \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notosans-kannada/ \
-  && unzip notoserif-kannada.zip -d /usr/share/fonts/truetype/google-fonts/notoserif-kannada/ \
-  && unzip notosans-kannada.zip -d /usr/share/fonts/truetype/google-fonts/notosans-kannada/ \
-  && rm -f notoserif-kannada.zip \
-  && rm -f notosans-kannada.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Serif Malayalam' -O notoserif-malayalam.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Sans Malayalam' -O notosans-malayalam.zip \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notoserif-malayalam/ \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notosans-malayalam/ \
-  && unzip notoserif-malayalam.zip -d /usr/share/fonts/truetype/google-fonts/notoserif-malayalam/ \
-  && unzip notosans-malayalam.zip -d /usr/share/fonts/truetype/google-fonts/notosans-malayalam/ \
-  && rm -f notoserif-malayalam.zip \
-  && rm -f notosans-malayalam.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Sans Oriya' -O notoserif-oriya.zip \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notoserif-oriya/ \
-  && unzip notoserif-oriya.zip -d /usr/share/fonts/truetype/google-fonts/notoserif-oriya/ \
-  && rm -f notoserif-oriya.zip \
-  && rm -f notosans-oriya.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Serif Tamil' -O notoserif-tamil.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Sans Tamil' -O notosans-tamil.zip \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notoserif-tamil/ \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notosans-tamil/ \
-  && unzip notoserif-tamil.zip -d /usr/share/fonts/truetype/google-fonts/notoserif-tamil/ \
-  && unzip notosans-tamil.zip -d /usr/share/fonts/truetype/google-fonts/notosans-tamil/ \
-  && rm -f notoserif-tamil.zip \
-  && rm -f notosans-tamil.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Serif Telugu' -O notoserif-telugu.zip \
-  && wget 'https://fonts.google.com/download?family=Noto Sans Telugu' -O notosans-telugu.zip \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notoserif-telugu/ \
-  && mkdir -p /usr/share/fonts/truetype/google-fonts/notosans-telugu/ \
-  && unzip notoserif-telugu.zip -d /usr/share/fonts/truetype/google-fonts/notoserif-telugu/ \
-  && unzip notosans-telugu.zip -d /usr/share/fonts/truetype/google-fonts/notosans-telugu/ \
-  && rm -f notoserif-telugu.zip \
-  && rm -f notosans-telugu.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Serif Bengali' -O bengali-notoserif.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Sans Bengali' -O bengali-notosans.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/bengali-notoserif/ \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/bengali-notosans/ \
+  && unzip bengali-notoserif.zip -d /usr/share/fonts/truetype/google-fonts/bengali-notoserif/ \
+  && unzip bengali-notosans.zip -d /usr/share/fonts/truetype/google-fonts/bengali-notosans/ \
+  && rm -f bengali-notoserif.zip \
+  && rm -f bengali-notosans.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Serif Devanagari' -O devanagari-notoserif.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Sans Devanagari' -O devanagari-notosans.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/devanagari-notoserif/ \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/devanagari-notosans/ \
+  && unzip devanagari-notoserif.zip -d /usr/share/fonts/truetype/google-fonts/devanagari-notoserif/ \
+  && unzip devanagari-notosans.zip -d /usr/share/fonts/truetype/google-fonts/devanagari-notosans/ \
+  && rm -f devanagari-notoserif.zip \
+  && rm -f devanagari-notosans.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Serif Gujarati' -O gujarati-notoserif.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Sans Gujarati' -O gujarati-notosans.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/gujarati-notoserif/ \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/gujarati-notosans/ \
+  && unzip gujarati-notoserif.zip -d /usr/share/fonts/truetype/google-fonts/gujarati-notoserif/ \
+  && unzip gujarati-notosans.zip -d /usr/share/fonts/truetype/google-fonts/gujarati-notosans/ \
+  && rm -f gujarati-notoserif.zip \
+  && rm -f gujarati-notosans.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Serif Gurmukhi' -O punjabi-gurmukhi-notoserif.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Sans Gurmukhi' -O punjabi-gurmukhi-notosans.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/punjabi-gurmukhi-notoserif/ \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/punjabi-gurmukhi-notosans/ \
+  && unzip punjabi-gurmukhi-notoserif.zip -d /usr/share/fonts/truetype/google-fonts/punjabi-gurmukhi-notoserif/ \
+  && unzip punjabi-gurmukhi-notosans.zip -d /usr/share/fonts/truetype/google-fonts/punjabi-gurmukhi-notosans/ \
+  && rm -f punjabi-gurmukhi-notoserif.zip \
+  && rm -f punjabi-gurmukhi-notosans.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Serif Kannada' -O kannada-notoserif.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Sans Kannada' -O kannada-notosans.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/kannada-notoserif/ \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/kannada-notosans/ \
+  && unzip kannada-notoserif.zip -d /usr/share/fonts/truetype/google-fonts/kannada-notoserif/ \
+  && unzip kannada-notosans.zip -d /usr/share/fonts/truetype/google-fonts/kannada-notosans/ \
+  && rm -f kannada-notoserif.zip \
+  && rm -f kannada-notosans.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Serif Malayalam' -O malayalam-notoserif.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Sans Malayalam' -O malayalam-notosans.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/malayalam-notoserif/ \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/malayalam-notosans/ \
+  && unzip malayalam-notoserif.zip -d /usr/share/fonts/truetype/google-fonts/malayalam-notoserif/ \
+  && unzip malayalam-notosans.zip -d /usr/share/fonts/truetype/google-fonts/malayalam-notosans/ \
+  && rm -f malayalam-notoserif.zip \
+  && rm -f malayalam-notosans.zip \
+  && wget 'https://fonts.google.com/download?family=Baloo Bhaina 2' -O oriya-serif-baloo-bhaina.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/oriya-serif-baloo-bhaina/ \
+  && unzip oriya-serif-baloo-bhaina.zip -d /usr/share/fonts/truetype/google-fonts/oriya-serif-baloo-bhaina/ \
+  && rm -f oriya-serif-baloo-bhaina.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Sans Oriya' -O oriya-notosans.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/oriya-notosans/ \
+  && unzip oriya-notosans.zip -d /usr/share/fonts/truetype/google-fonts/oriya-notosans/ \
+  && rm -f oriya-notosans.zip \
+  && rm -f oriya-notosans.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Serif Tamil' -O tamil-notoserif.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Sans Tamil' -O tamil-notosans.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/tamil-notoserif/ \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/tamil-notosans/ \
+  && unzip tamil-notoserif.zip -d /usr/share/fonts/truetype/google-fonts/tamil-notoserif/ \
+  && unzip tamil-notosans.zip -d /usr/share/fonts/truetype/google-fonts/tamil-notosans/ \
+  && rm -f tamil-notoserif.zip \
+  && rm -f tamil-notosans.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Serif Telugu' -O telugu-notoserif.zip \
+  && wget 'https://fonts.google.com/download?family=Noto Sans Telugu' -O telugu-notosans.zip \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/telugu-notoserif/ \
+  && mkdir -p /usr/share/fonts/truetype/google-fonts/telugu-notosans/ \
+  && unzip telugu-notoserif.zip -d /usr/share/fonts/truetype/google-fonts/telugu-notoserif/ \
+  && unzip telugu-notosans.zip -d /usr/share/fonts/truetype/google-fonts/telugu-notosans/ \
+  && rm -f telugu-notoserif.zip \
+  && rm -f telugu-notosans.zip \
   && fc-cache -f \
   && rm -rf /var/cache/*
 
@@ -88,7 +92,7 @@ RUN wget 'https://fonts.google.com/download?family=Merriweather Sans' -O merriwe
 RUN chmod o+w /opt/texlive/texdir/texmf-var
 
 # `template.tex` file uses crimsonpro font for text
-RUN tlmgr install crimsonpro tabulary selnolig
+RUN tlmgr install crimsonpro tabulary selnolig pdfpages
 
 #RUN apk add --no-cache texmf-dist-langextra
 
